# WebServer

./: CMakeLists.txt  TaskWebServer.cpp  TaskWebServer.sln  TaskWebServer.vcxproj  TaskWebServer.vcxproj.filters  WebServer.sln  connection.cpp  connection_manager.hpp  errorCompiler.txt  index.html  mime_types.hpp  reply.hpp  request.hpp  request_parser.hpp  run.bat  server.hpp
WebServer/: ReadMe.txt  WebServer.cpp  WebServer.vcxproj  WebServer.vcxproj.filters  connection.cpp  connection.hpp  connection_manager.cpp  header.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  wsTrace.cpp  wsTrace.hpp
