cmake_minimum_required(VERSION 2.8)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -L/usr/lib -I/usr/include -I/usr/include/freetype2 -lpthread -lboost_system -lboost_filesystem -lboost_thread")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -lpthread -lboost_system -lboost_filesystem -lboost_thread")
set(CMAKE_CXX_FLAGS "-std=gnu++11")
project(WebServerPrj)
find_package(Boost 1.54.0)
if(Boost_FOUND)
	include_directories(${Boost_INCLUDE_DIRS})
	set(SOURCE_EXE ./WebServer/WebServer.cpp)
	set(connection ./WebServer/connection.cpp)
	set(connection_manager ./WebServer/connection_manager.cpp)
	set(mime_types ./WebServer/mime_types.cpp)
	set(reply ./WebServer/reply.cpp)
	set(request_handler ./WebServer/request_handler.cpp)
	set(request_parser ./WebServer/request_parser.cpp)
	set(server ./WebServer/server.cpp)
	set(wsTrace ./WebServer/wsTrace.cpp)

	add_executable(final ${SOURCE_EXE} ${connection} ${connection_manager} ${mime_types} ${reply} ${request_handler} ${request_parser} ${server} ${wsTrace})
	target_link_libraries(final boost_system boost_filesystem)
endif()
